Make the skeleton for showing the total
As of now, we'll plan to make the 'new' action call the 'create' action
with a POST.  (inside of which we will scrape AirBnB (to be completed))
and redirect to the new action.

The 'new' template will display the outputs of the calculation if the
query string parameters are present:
params: {
  long_term_rent: 235, # the amount one can make through long term rent
  airbnb_rent: 235, # the amount one can make through airbnb
}

--- a/app/views/calculation/new.html.erb
+++ b/app/views/calculation/new.html.erb
@@ -1,1 +1,40 @@
-hey there
+<div class="center">
+  <h1>Airbnb Profit Calculator</h1>
+
+  <p>Calculate how much money you could be making by putting your property on AirBnB over renting it long term!</p>
+
+  <%= form_tag do %>
+    <p>
+    <%# TODO: extract to helper %>
+      <%= label_tag(:monthly_income, 'Your typical monthly rental income:') %>
+    <br />
+    $<%= number_field(:montly_income, :rental_income, step: 1, placeholder: 200) %>
+    </p>
+
+    <p>
+      <%= label_tag(:address, 'Your address:') %>
+      <br />
+      <%= text_field_tag(:address) %>
+    </p>
+
+    <%= submit_tag('Calculate your profit!') %>
+  <% end %>
+
+  <% if params[:long_term_rent].present? %>
+    <div class="long-term-rent-display">
+      Your long term rent: $<%= params[:long_term_rent] %>
+    </div>
+  <% end %>
+
+  <% if params[:airbnb_rent].present? %>
+    <div class="airbnb-rent-display">
+      Your AirBnb rent potential: $<%= params[:airbnb_rent] %>
+    </div>
+  <% end %>
+
+  <% if params[:long_term_rent].present? && params[:airbnb_rent].present? %>
+    <div class="total">
+      <%= calculated_text(params) %>
+    </div>
+  <% end %>
+</div>
