--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,4 +12,5 @@
 <%= yield %>
 
 </body>
+<%= javascript_include_tag 'https://maps.googleapis.com/maps/api/js?key=AIzaSyDth09gZminS-IVUMrpcKnKiYQQC9pPJgA&libraries=places&callback=initAutocomplete' %>
 </html>
